--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
 
         // 检查更新
         function checkForUpdates() {
-            alert('当前已是最新版本 v1.0\n\n功能特点：\n• 本地存储密码数据\n• 生成随机密码\n• 密码管理\n• 数据安全存储在您的设备上');
+            alert('当前版本v1.0 请前往legmc1.netlify.app手动检查更新\n\n功能特点：\n• 本地存储密码数据\n• 生成随机密码\n• 密码管理\n• 数据安全存储在您的设备上');
         }
 
         // 点击 + 按钮
